# SafeSpeak-Moderation-API-fairness-robustness-for-FR-AR-Darija

./: .gitignore  Dockerfile  INTERFACE_README.md  MLOPS_README.md  README.dev.md  README.md  SafeSpeak_Project_Documentation.md  deploy.sh  docker-compose.yml  dvc.yaml  hydrate_albadi.py  interface.html  nginx.conf  parse_narabizi.py  pyproject.toml  requirements.txt  safespeak_demo.ipynb
.github/workflows/: ci.yml
annotations/: guidelines.md  slices.yaml
baselines/: train_tfidf.py  train_transformer.py
configs/perturb/: fr_typo_leet.yaml
data/: data_collection_plan.md  data_inventory.md  data_strategy.md
data/configs/: algd_toxicity_dz.yaml  arabizi_offensive_lang.yaml  armi_ar_train.yaml  base_donnee_hate_speech_ar.yaml  hatecheck_arabic.yaml  hatecheck_french.yaml  hatexplain_en.yaml  hatexplain_fr.yaml  jigsaw_en.yaml  narabizi_treebank.yaml  sample_ingest.yaml  t_hsab_tunisian.yaml  toxic_arabic_tweets.yaml
data/final/: train_corrected_french_max_augmentation.csv.dvc
data/metadata/: PUB-001.json  PUB-004.json  PUB-008.json  PUB-009.json  PUB-011.json  PUB-012.json  PUB-013.json  PUB-014.json  PUB-015.json  PUB-016.json  PUB-017.json  SYN-001.json  SYN-002.json
data/review/: hatexplain_fr_adv_typo_similarity.json  syn-002_2025-10-05.md
docs/: # Code Citations.md  adversarial_dataset_release.md  adversarial_perturbations_design.md  adversarial_stress_test_report.md  bert_finetuning_summary.md  conformal_prediction_guide.md  cross_validation_summary.md  data-governance.md  data_augmentation_summary.md  dataset_strategy_decision.md  development_plan.md  ethics-charter.md  final_audit_report.md  human_appeal_sop.md  model_comparison_report.md  performance_dashboard.md  phase5_completion_summary.md  production_deployment_checklist.md  raci.md  risk_register.md  roadmap.md  usage_policy.md
docs/analysis/: analysis_report.json
results/bert_max_french_augmentation/: bert_finetuning_detailed.json.dvc  bert_finetuning_summary.txt.dvc
scripts/: adversarial_testing.py  analyze_datasets.py  back_translate_french.py  balance_datasets.py  bert_finetuning.py  combine_datasets.py  conformal_prediction.py  continual_learning.py  create_cv_splits.py  cross_validation.py  drift_detection.py  evaluate_model.py  extract_darija.py  extract_hatexplain.py  integrate_french_hatecheck.py  integrate_jigsaw_translations.py  integrate_max_french_augmentation.py  mass_relabel_arabic.py  production_guardrails.py  relabel_darija.py  safespeak_api.py  test_translation.py  translate_dataset.py  translate_jigsaw_to_french.py
scripts/augment/: adversarial_perturb.py  back_translate.py  darija_augment.py
scripts/qa/: similarity_report.py
src/safespeak/: __init__.py  translation.py
tests/: test_ingest.py  test_metrics.py  test_preprocessing.py
(+7 files in other folders)
